crates/stef-build/tests/snapshots/compiler__compile@struct-many-ws.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "/// Some comment\n       struct      Sample<\n            A,\n            B\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n\n    }"
input_file: crates/stef-parser/tests/inputs/struct-many-ws.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
/// Some comment
#[derive(Clone, Debug, PartialEq)]
pub struct Sample<A, B> {
    pub a: u32,
    pub b: bool,
}
#[automatically_derived]
impl<A, B> ::stef::Encode for Sample<A, B>
where
    A: ::stef::buf::Encode,
    B: ::stef::buf::Encode,
{
    #[allow(clippy::needless_borrow, clippy::explicit_auto_deref)]
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        ::stef::buf::encode_field(
            w,
            1,
            |w| {
                ::stef::buf::encode_u32(w, self.a);
            },
        );
        ::stef::buf::encode_field(
            w,
            2,
            |w| {
                ::stef::buf::encode_bool(w, self.b);
            },
        );
        ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
    }
}
#[automatically_derived]
impl<A, B> ::stef::Decode for Sample<A, B>
where
    A: ::std::fmt::Debug + ::stef::buf::Decode,
    B: ::std::fmt::Debug + ::stef::buf::Decode,
{
    #[allow(clippy::type_complexity)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        let mut a: Option<u32> = None;
        let mut b: Option<bool> = None;
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                1 => a = Some(::stef::buf::decode_u32(r)?),
                2 => b = Some(::stef::buf::decode_bool(r)?),
                _ => continue,
            }
        }
        Ok(Self {
            a: a
                .ok_or(::stef::buf::Error::MissingField {
                    id: 1,
                    name: Some("a"),
                })?,
            b: b
                .ok_or(::stef::buf::Error::MissingField {
                    id: 2,
                    name: Some("b"),
                })?,
        })
    }
}

